--- a/package.json
+++ b/package.json
@@ -11,6 +11,17 @@
   "dependencies": {
     "next": "13.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
+    "react-outside-click-handler": "^1.3.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "eslint": "8.27.0",
+    "eslint-config-next": "13.0.2",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.2"
   }
 }
